# cktdetect

./: DESIGN.md  README.md  SUPPORTED_TYPES.md  USER_MANUAL.md  chatGPT.md  pyproject.toml
.github/workflows/: tests.yml
cktdetect/: calibration.py  cli.py  diffcmp.py  profile.py  templates.py  viewer.py
cktdetect/classify/: __init__.py  context.py  engine.py  stages.py  system.py
cktdetect/graph/: __init__.py  feedback.py  logic.py  stagegraph.py
cktdetect/ir/: __init__.py  circuit.py  device.py  flatten.py
cktdetect/parser/: __init__.py  spectre.py  spice.py  values.py
cktdetect/passes/: __init__.py  branches.py  devroles.py  families.py  netroles.py  normalize.py  rails.py  structures.py
cktdetect/passive/: __init__.py  arrays.py  ladder.py
cktdetect/rf/: __init__.py  detect.py
profiles/: sky130.json  tsmc40_magical.json
tests/benchmarks/: bandgap_core.sp  beta_multiplier.sp  bulk_vote.sp  cascode_mirror.sp  cascoded_mirror_bias.sp  class_ab_output.sp  common_source_amp.sp  current_mirror.sp  dickson_charge_pump.sp  diffpair_negative.sp  fd_ota_cmfb.sp  fd_ota_cmfb_amp.sp  five_t_ota.sp  flash_adc.sp  folded_cascode_ota.sp  gilbert_mixer.sp  latch_comparator.sp  lc_lowpass_pi.sp  lc_vco.sp  ldo.sp  lna.sp  pll.sp  r2r_ladder.sp  r_divider.sp  rail_to_rail_input.sp  rc_highpass.sp  rc_lowpass.sp  ring_oscillator.sp  rlc_bandpass.sp  sample_and_hold.sp  source_follower.sp  strongarm_comparator.sp  telescopic_ota.sp  two_stage_ota.sp  vco_stage_chain.sp
tests/unit/: test_branches.py  test_calibration.py  test_classify.py  test_cli.py  test_cmfb.py  (+20 more)
(+6 files in other folders)
