[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cktdetect"
version = "0.1.0"
description = "Rule-based circuit type detection from SPICE netlists"
requires-python = ">=3.10"

[project.scripts]
cktdetect = "cktdetect.cli:main"

[tool.setuptools.packages.find]
include = ["cktdetect*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
